Yet more works about relax generators.

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -9,7 +9,7 @@
 Релаксационные генераторы, прямо или косвенно, получили широкое распространение
 в схемотехнике. В первую очередь -- как собственно генераторы
 сигналов, в первую очередь пилообразной формы~[??].
-Некоторые подсистемы электрических схем, хоть и непосредственно
+Некоторые подсистемы электрических схем, хоть и не относятся непосредственно к
 релаксационными генераторами, проявляют схожую динамику.
 В первую очередь это импульсные системы питания, такие как
 современные блоки питания электронной техники, DC/DC преобразователи.
@@ -54,8 +54,8 @@ $V_{i}$ и $ On_{i}()$.
 включается при $V\Tidx{c} > V\Tidx{on} $ и выключается при
 $V\Tidx{c} < V\Tidx{off}$.
 
-С учётом этих обозначений модель релаксационного генератора
-записывается следующим образом:
+С учётом этих обозначений динамика релаксационного генератора
+определяется следующим образом:
 %
 \begin{equation}
   C \od{V_c}{t}
@@ -71,10 +71,142 @@ $V\Tidx{c} < V\Tidx{off}$.
 очередь, величина $C R\Tidx{ch}$ определяет
 постоянную времени процесса заряда, а процесс
 разряда при условии $R\Tidx{ch} \gg R\Tidx{dis} $ будем считать происходящим практически мгновенно.
-Далее, 
+Обозначим:
+%
+\begin{equation}
+  t_u = \frac{t}{R\Tidx{dis} C} .
+  \label{atu:eq:t_u_relax}
+\end{equation}
+
+Далее, так как напряжение не опускается ниже $V\Tidx{off}$,
+то имеет смысл принять это значение как нулевой потенциал, с соответствующей
+коррекцией оставшихся величин. При дальнейшем приведении напряжений к безразмерному виду
+можно поступить двумя способами: принять за единицу или
+скорректированное напряжение питания $V\Tidx{cc}-V\Tidx{off}$,
+или же
+скорректированное напряжение включения $V\Tidx{on}-V\Tidx{off}$.
+Для одного релаксационного генератора выбор способа практически ни
+на что не влияет, но при использовании нескольких --- более удобным
+становится первый способ. Таким образом, обозначим:
+%
+\begin{equation}
+  v(t) = \frac{V(t)-V\Tidx{off}}{V\Tidx{cc}-V\Tidx{off}},
+  \quad
+  v\Tidx{on} = \frac{V\Tidx{on}-V\Tidx{off}}{V\Tidx{cc}-V\Tidx{off}},
+  \quad
+  v\Tidx{on} \in ( 0; 1 ).
+  \label{atu:eq:v_u_relax}
+\end{equation}
+
+С учётом этих обозначений, уравнение, описывающее процесс одной зарядки приобретает вид:
+%
+\begin{equation}
+  \od{v}{t_u} = 1 - v( t_u ),
+  \quad
+  v( t_u ) < v\Tidx{on},
+  \quad
+  v(0) = 0.
+  \label{atu:eq:relax_charge_u}
+\end{equation}
+
+Решением (\ref{atu:eq:relax_charge_u}) является
+%
+\begin{equation}
+  v(t_u) = 1 - \exp( - t_u ) ,
+  \quad
+  v( t_u ) < v\Tidx{on}.
+  \label{atu:eq:relax_charge_u_solu}
+\end{equation}
+
+Безразмерное время переключения $T_u$,
+при пренебрежении временем разрядки,
+определяет безразмерный период:
+%
+\begin{equation}
+  v\Tidx{on} = 1 - \exp( - T_u ),
+  \quad
+  T_u = - \ln ( 1 - v\Tidx{on} ).
+  \label{atu:eq:T_u_relax}
+\end{equation}
+
+Таким образом, в линейном приближении, и при пренебрежением временем разрядки,
+поведение системы определяется одним безразмерным параметром $v\Tidx{on}$,
+и определяет другой безразмерный параметр $T_u$.
+При $v\Tidx{on} \ll 1 $ процесс зарядки практически линеен,
+усреднённое значение $v(t_u)$:
+%
+\begin{equation}
+  \overline{v(t_u)} =
+  \frac{1}{T_u}\int\limits_{0}^{T_u} \mathrm{d}t_u
+  \approx
+  \frac{v\Tidx{on}}{ 2 }.
+  \label{atu:eq:av_lin_relax}
+\end{equation}
+%
+и
+%
+\begin{equation}
+  T_u
+  \approx
+  v\Tidx{on}.
+  \label{atu:eq:T_u_lin_relax}
+\end{equation}
+
+С другой стороны, при $v\Tidx{on} \to 1$, $T_u \to \infty$,
+и
+$ \overline{v(t_u)} \to v\Tidx{on}$.
+Из этих наблюдений следует, что если для одиночного релаксационного генератора
+есть возможность наблюдать период (или же частоту) колебаний,
+то безразмерный параметр $v\Tidx{on}$ определяется просто и без
+существенных погрешностей измерения. И наоборот,
+если для измерения доступна величина $\overline{v(t_u)}$,
+то при малых значениях $v\Tidx{on}$ сложностей при измерении (или же идентификации) нет,
+а при $v\Tidx{on} \approx 1$ малые изменения $\overline{v(t_u)}$
+приводят к практически не ограниченным изменением $T_u$,
+что не способствует процессу идентификации.
+
+Тем не менее, в случае, когда в одном генераторе используется
+несколько релаксационных элементов,
+то понятие периода не имеет особого смысла, или же вообще не
+определено в случае хаотического поведения. Поэтому,
+измерения усреднённых напряжений может оказаться практически
+единственным способом оценки параметров системы.
+
 
 Если же применяется в одной схеме несколько релаксационных генераторов с различными параметрами,
-то такое приведение практического смысла не имеет.
+или же рассматриваются нелинейные зависимости токов от разностей потенциалов,
+то приведение к безразмерному виду практического смысла не имеет,
+однако закономерности, полученные для простого случая,
+полезны для анализа возможных критериев идентификации.
+
+
+В предыдущих рассуждениях было принято $V\Tidx{cc} = \mathrm{const}$.
+Однако, при анализе динамики реальных генераторов это предположение
+не вполне адекватно описывает динамику, так как реальные
+источники напряжения имеют ограниченные возможности.
+При описании одного релаксационного элемента
+ограниченность возможностей источника элементарно компенсируется
+добавлением внутреннего сопротивления источника к $R\Tidx{dis}$.
+В случае, когда один реальный источник питает
+насколько генераторов, такой подход становится неприменимым.
+В этом случае, для сохранения условия  $V\Tidx{cc} = \mathrm{const}$
+будем считать, что эта величина описывает ЭДС источника
+без нагрузки, а все релаксационные генераторы
+получают от шины питания с напряжением $V_b(t)$,
+которое определяется как суммарным током потребления,
+так и ограниченным возможностями шины питания,
+которые, в первом приближении, описываются
+эффективным сопротивлением $R_b$, определяемым как внутренним сопротивлением
+источника, так и сопротивлением самой шины, т.е.
+%
+\begin{equation}
+  V_b(t) = V\Tidx{cc} - R_b \sum\limits_{i=0}^{n-1} I_i(t),
+  \label{atu:eq:V_b_relax}
+\end{equation}
+%
+где $i$ -- порядковый номер релаксационного элемента,
+$I_i(t)$ -- потребляемый им ток.
+
 
 
 Элементная база, задачи. Почему возможны хаотические режимы
@@ -259,9 +391,9 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 (с соответствующими коэффициентами) отдельных релаксационных
 элементов, т.е. набор отдельных частот~(рис.~\ref{atu:f:relax3d_f_02},a).
 Аттрактор системы при этом имеет вид достаточно нетипичный для
-нехаотрических систем (рис.~\ref{atu:f:relax3d_f_02},b).
+систем, не демонстрирующих хаотическую динамику (рис.~\ref{atu:f:relax3d_f_02},b).
 Если отношения частот релаксационных элементов
-не представляют собой рационально число, что аттрактор
+не представляют собой рациональное число, то аттрактор
 представляет собой куб, плотно заполненный по каждой координате в
 диапазоне $[ V\Tidx{off} ; V\Tidx{on} ] $.
 
@@ -431,7 +563,7 @@ $V\Tidx{on}$, $V\Tidx{off}$,
   \label{atu:f:relax3ds_schem}
 \end{figure}
 
-Принципиальна эта схема не отличается от изображённой на рис.(рис.~\ref{atu:f:relax3d_schem}).
+Принципиальна эта схема не отличается от изображённой на рис.~\ref{atu:f:relax3d_schem}.
 Все вспомогательные элементы исполняют аналогичную роль.
 При этом существуют и определённые отличия.
 Напряжения срабатывания переключающего элемента
