--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -757,33 +757,92 @@ $V_{on}$, $V_{off}$.
 
 $R_{i,\mathrm{leak}}$ --- сопротивления утечки.
 
-
+\Cmt{графики сравнения?}
 
 \section{Критерии идентификации систем из трёх связанных релаксационных генераторов}
 
 Рассмотрим возможные критерии для системы релаксационных
 генераторов. В Первую очередь имеет смысл
 рассмотреть критерии, основанные на физических принципах.
+Как уж было отмечено, использование в качестве критерия периода
+колебаний неприменимо даже в случае сложно-периодического режима,
+не говоря уже про хаотический.
+Непосредственное применение энергетических критериев
+для систем такого типа также не вполне обосновано --
+в системе такое соотношение между возможностями источника энергии
+и потребителями (релаксационными элементами), что
+потребление энергии лимитируется именно потребителями.
+При этом моменты переключения определяются соответствующими разностями
+потенциалов, следовательно, в первую очередь стоит рассматривать
+интегральные величины, скорее всего -- скользящие средние
+от $V_b$, $V_1$, $V_2$, $V_3$.
 
-
-\[
+Рассмотрим первый из кандидатов в критерии:
+\begin{equation}
   q_{sv} = \overline{V_1+V_2+V_3} .
- \]
+  \label{atu:eq:q_sv_relax}
+\end{equation}
 
-\[
+
+Как уже было отмечено (\ref{atu:eq:av_lin_relax},\ref{atu:eq:T_u_lin_relax})
+эти величины непосредственно связаны с нелинейностью
+зависимостей $V_i(t)$, и зависимость достаточно слабая.
+При этом следует отметить достаточно неожиданный факт ---
+при увеличении $R_b$, а следовательно ухудшении
+возможностей источника питания, среднее напряжение
+на релаксационных элементах растёт~(рис.~\ref{atu:f:relax3d_q}, \ref{atu:f:relax3ds_q}).
+Это объясняется тем,
+что при росте $R_b$ генераторы всё большую долю времени
+затрачивают на ожидание непосредственно перед срабатыванием переключающего
+элемента.
+
+Таким образом, величину $q_{sv}$ можно использовать в качестве критерия,
+но малый диапазон её изменения, вкупе с ошибками изменения,
+препятствует созданию эффективной системы идентификации на этой основе.
+
+
+Следующая величину, которую имеет смысл использовать в качестве критерия,
+%
+\begin{equation}
   q_{vb} = \overline{V_b} .
-\]
-
-\[
+  \label{atu:eq:q_vb_relax}
+\end{equation}
+%
+имеет непосредственную связь с идентифицируемым параметром $R_b$,
+и, на первый взгляд, должна лучше подходить для
+создания системы идентификации. Тем не менее,
+анализ как реальных, так и модельных
+зависимостей~(рис.~\ref{atu:f:relax3d_q}, \ref{atu:f:relax3ds_q}),
+показывает, что данный критерий имеет преимущества при малых значениях $R_b$,
+при которых связь между релаксационными элементами слаба,
+и не хаотическое поведение не наблюдается. На первый взгляд,
+это может быть связано о обратной зависимостью $q_{vb}(R_b)$,
+и применение критерия вида
+%
+\begin{equation}
   q_{hv} = \frac{1}{\overline{V_b}} .
-\]
+  \label{atu:eq:q_hb_relax}
+\end{equation}
+может исправить ситуацию. Тем не менее,
+как результаты моделирования, так и натурный эксперимент
+показывают, что это не так. Нелинейная
+зависимость среднего тока через элемент
+от среднего падения напряжения не даёт возможности
+эффективно использовать $q_{hv}$.
 
+Рассмотрим комбинированный критерий
 \[
   q_{rv} = \frac{\overline{V_1+V_2+V_3}}{\overline{V_b}}.
 \]
 
+Анализ полученных зависимостей ~(рис.~\ref{atu:f:relax3d_q}, \ref{atu:f:relax3ds_q})
+даёт основания полагать, что данный критерий --- лучший среди рассмотренных.
+Более того, он является безразмерным, что является важным свойством критерия ---
+скорее всего, при изменении параметров системы параметры системы
+идентификации скорее всего не придётся перенастраивать.
+
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.7\textwidth]{p/relax3_read_q-p_q1.png} }
+  \centerline{\includegraphics[width=0.7\textwidth]{p/relax3d_read_q-p_q1.png} }
   \caption{Зависимости для рассматриваемых критериев идентификации для системы релаксационных генераторов на паре комплиментарных транзисторов}
   \label{atu:f:relax3d_q}
 \end{figure}
@@ -793,6 +852,17 @@ $R_{i,\mathrm{leak}}$ --- сопротивления утечки.
   \caption{Зависимости для рассматриваемых критериев идентификации для системы релаксационных генераторов на триггерах Шмидта}
   \label{atu:f:relax3ds_q}
 \end{figure}
+
+На представленных графиках приведены зависимости рассматриваемых критериев
+как для реальных физических экспериментов (сплошные линии),
+так и полученные в результате численного моделирования (штриховые линии).
+Близость соответствующих кривых свидетельствует
+о достаточной адекватности применяемых моделей.
+Наибольшие отличия наблюдаются в правой части графиков, где существенными
+явлениями являются токи утечки, имеющие нелинейную зависимость от разности потенциалов.
+В этих местах прогнозируется рост систематической ошибки идентификации.
+Тем не менее, несмотря на эти недостатки, общий вид этих зависимостей
+даёт всё основания предполагать возможность построения работоспособной системы идентификации.
 
 \section{Идентификация параметра системы из трёх связанных релаксационных генераторов}
 
